sports.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: try-ingress-sports
  labels:
    app: ingre
spec:
  # modify replicas according to your case
  replicas: 2
  selector:
    matchLabels:
      app: sports
  template:
    metadata:
      labels:
        app: sports
    spec:
      containers:
      - name: msg
        image: hashicorp/http-echo:0.2.3  
        args: 
          - "-listen=:5678"
          - "-text=Hello from Sports.com"
        ports:
        - containerPort: 5678
        
---
apiVersion: v1
kind: Service
metadata:
  name: sports-svc
spec:
  selector:
      app: sports
  ports:
    -  name: sport
       protocol: TCP
       port: 2000
       targetPort: 5678
